fixed the spacing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,12 @@
   background-color: papayawhip;
 }
 
+.spaceforsketches {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 
 
